<resources>
    <string name="app_name">ZPK Orienteering</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">ZPK Orienteering</string>
    <string name="scanCode">Zeskanuj kod.</string>
    <string name="checkpointsVisited">Odwiedzono punktów</string>
    <string name="runStarted">Rozpoczęto bieg</string>
    <string name="title_activity_settings">Settings</string>
    <string name="IsDebug">Włącz debugowanie</string>
    <string name="SaveSettings">Zapisz ustawienia</string>
    <string name="title_activity_run_history">Historia biegów</string>
    <string name="menu_history">Historia biegów</string>
    <string name="title_activity_run_details">Szczegóły biegu</string>
    <string name="runStartedDate">Czas rozpoczęcia: </string>
    <string name="runEndedDate">Czas zakończenia: </string>
    <string name="runCheckpointTimes">Czasy na odcinkach:</string>
    <string name="back">Wróć</string>
    <string name="delete">Usuń</string>
    <string name="Export">Eksportuj</string>
    <string name="ShareWithRefs">Udostępnij bieg organizatorom</string>
    <string name="save">Zapisz</string>
    <string name="setId">Ustaw identyfikator</string>
    <string name="TypeIDHere">Wpisz identyfikator</string>
    <string name="ID">Twój identyfikator:</string>
    <string name="title"></string>
    <string name="title_activity_idchooser">Ustaw identyfikator</string>
    <string name="resetRun">Wyczyść bieg</string>
    <string name="title_activity_about__me">O aplikacji</string>
    <string name="aboutMe">System powstał w ramach realizacji pracy dyplomowej na Wydziale informatyki Politechniki Białostockiej. \nAplikacja korzysta z projektu ZXing (http://code.google.com/p/zxing/), który jest dostępny na licencji Apache License v2.0, której treść w języku angielskiem jest załączona poniżej:</string>
</resources>